# WeatherCLI

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/WConfig/: CMakeLists.txt  WConfig.cpp  WConfig.hpp
lib/WInterface/: CMakeLists.txt  WInterface.cpp  WInterface.hpp
lib/WRequests/: CMakeLists.txt  WRequests.cpp  WRequests.hpp
lib/Weather/: CMakeLists.txt
lib/WeatherInterface/: CMakeLists.txt  WeatherInterface.cpp  WeatherInterface.hpp
lib/WeatherUI/: CMakeLists.txt
